fixed dropdown gap

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
   --top-a: 10rem;
   --left-a: 7.8rem;
 
-  --top-b: 10.15rem;
+  --top-b: 9.1rem;
   --left-b: 6.8rem;
 }
 a {
